--- a/starter/03-CSS-Fundamentals/style.css
+++ b/starter/03-CSS-Fundamentals/style.css
@@ -9,13 +9,15 @@ body {
   color: #444;
 
   border-top: 10px solid #1098ad;
+  position: relative;
 }
 
 .container {
   width: 700px;
-  /* margin-left: auto;
-  margin-right: auto; */
+  margin-left: auto;
+  margin-right: auto;
   margin: 50 auto;
+  /* position: relative; */
 }
 
 .main-header {
@@ -24,11 +26,12 @@ body {
   padding-left: 40px;
   padding-right: 40px; */
   padding: 20px 40px;
-  height: 80px;
+  /* height: 80px; */
 }
 
 nav {
   font-size: 18px;
+  /* text-align: center; */
 }
 
 article {
@@ -37,6 +40,7 @@ article {
 
 .post-header {
   margin-bottom: 30px;
+  /* position: relative; */
 }
 
 aside {
@@ -168,6 +172,68 @@ a:active {
   width: 100%;
   height: auto;
 }
+
+nav a:link {
+  /* background-color: orangered;
+  margin: 20px;
+  padding: 20px;
+  display: block; */
+  margin-right: 30px;
+  margin-top: 10px;
+  display: inline-block;
+}
+
+nav a:link:last-child {
+  margin-right: 0;
+}
+
+button {
+  font-size: 22px;
+  padding: 20px;
+  cursor: pointer;
+
+  position: absolute;
+  bottom: 50px;
+  right: 50px;
+}
+
+h1::first-letter {
+  font-style: normal;
+}
+
+h2 {
+  /* background-color: orange; */
+  position: relative;
+}
+
+h2::after {
+  content: '😂 NEW';
+  background-color: #ffe70e;
+  color: #444;
+  font-size: 16px;
+  font-weight: bold;
+  display: inline-block;
+  padding: 5px 10px;
+  position: absolute;
+  top: -10px;
+  right: -25px;
+}
+
+/* .main-header nav a:link {
+  margin-top: 100px;
+} */
+
+/* h2::first-letter {
+  font-size: 60px;
+} */
+
+/* p::first-line {
+  color: red;
+} */
+
+/* h3 + p::first-line {
+  color: red;
+} */
 
 /* LVHA */
 
