--- a/starter/07-Omnifood-Desktop/css/style.css
+++ b/starter/07-Omnifood-Desktop/css/style.css
@@ -1,115 +1,82 @@
-/*
---- 01 TYPOGRAHY
+/**************************************/
+/* HEADER */
+/**************************************/
 
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #fdf2e9;
 
-- FONT SIZE SYSTEM (px)
-10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
-
-- Font weigths
-Default: 400
-
-- Line heights
-Default:1
-
-
-
---02 COLOURS
-
-Primary: #e67e22
-Tints: #fdf2e9
-Shades: #cf711f
-Accents:
-Greys:
-#555
-#333
-
-
--- 05 SHADOWS
-
--- 06 BORDER-RADIUS
-
--- 07 WHITESPACE
-- Spacing System (px)
-2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
-
-*/
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+  /* Bec ause we want header to be sticky later */
+  height: 9.6rem;
+  padding: 0 4.8rem;
 }
-html {
-  /* font-size: 10px; */
-  font-size: 62.5%;
+.logo {
+  height: 2.2rem;
 }
 
-body {
-  font-family: 'Rubick', sans-serif;
-  line-height: 1;
-  font-weight: 400;
-  color: #555;
+/**************************************/
+/* NAVIGATION */
+/**************************************/
+
+.main-nav-list {
+  list-style: none;
+  display: flex;
+  align-items: center;
+
+  gap: 3.2rem;
 }
+
+.main-nav-link:link,
+.main-nav-link:visited {
+  display: inline-block;
+  text-decoration: none;
+  color: #333;
+  font-weight: 500;
+  font-size: 1.8rem;
+  transition: all 0.3s;
+}
+
+.main-nav-link:hover,
+.main-nav-link:active {
+  color: #cf711f;
+}
+
+/* this refers that  only be apllied if both of classes are present in element */
+
+.main-nav-link.nav-cta:link,
+.main-nav-link.nav-cta:visited {
+  display: inline-block;
+  padding: 1.2rem 2.4rem;
+  border-radius: 9px;
+  color: #fff;
+  background-color: #e67e22;
+}
+.main-nav-link.nav-cta:hover,
+.main-nav-link.nav-cta:active {
+  background-color: #cf711f;
+  color: #fff;
+}
+
+/**************************************/
+/* HERO SECTION */
+/**************************************/
 
 .section-hero {
   background-color: #fdf2e9;
-  padding: 9.6rem 0;
+  padding: 4.8rem 0 9.6rem 0;
 }
 
 .hero {
   max-width: 130rem;
   /* trick to center */
   margin: 0 auto;
+  padding: 0 3.2rem;
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 9.6rem;
   align-items: center;
-}
-
-.heading-primary {
-  font-size: 5.2rem;
-  font-weight: 700;
-  line-height: 1.05;
-  color: #333;
-  letter-spacing: -0.5px;
-  margin-bottom: 3.2rem;
-}
-
-.btn:link,
-.btn:visited {
-  display: inline-block;
-  text-decoration: none;
-  font-weight: 600;
-  font-size: 2rem;
-  padding: 1.6rem 3.2rem;
-  border-radius: 0.9rem;
-
-  transition: background-color 0.3s;
-}
-
-.btn--full:link,
-.btn--full:visited {
-  background-color: #e67e22;
-  color: #fff;
-}
-
-.btn--full:hover,
-.btn--full:active {
-  background-color: #cf711f;
-}
-
-.btn--outline:link,
-.btn--outline:visited {
-  background-color: #fff;
-  color: #555;
-}
-
-.btn--outline:hover,
-.btn--outline:active {
-  background-color: #fdf2e9;
-  /* border: 3px solid #fff; */
-  /* Trick to add border inside */
-  box-shadow: inset 0 0 0 3px #fff;
 }
 
 .hero-img {
@@ -123,10 +90,6 @@ body {
   font-size: 2rem;
   line-height: 1.6;
   margin-bottom: 4.8rem;
-}
-
-.margin-right-sm {
-  margin-right: 1.6rem !important;
 }
 
 .delivered-meals {
@@ -159,3 +122,71 @@ body {
   color: #cf711f;
   font-weight: 700;
 }
+
+/**************************************/
+/* HOW IT WORKS SECTION */
+/**************************************/
+
+.section-how {
+  padding: 9.6rem 0;
+}
+
+.step-number {
+  font-size: 8.6rem;
+  font-weight: 600;
+  color: #ddd;
+  margin-bottom: 1.2rem;
+}
+
+.step-description {
+  font-size: 1.8rem;
+  line-height: 1.8;
+}
+
+.step-img-box {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.step-img-box::before,
+.step-img-box::after {
+  content: '';
+  display: block;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.step-img-box::before {
+  width: 60%;
+  /* height: 60%;  this won't work*/
+
+  /* 60% of parent's width   */
+  padding-bottom: 60%;
+
+  background-color: #fdf2e9;
+  z-index: -2;
+}
+
+.step-img-box::after {
+  width: 45%;
+  padding-bottom: 45%;
+  background-color: #fae5d3;
+  z-index: -1;
+}
+
+.step-img {
+  width: 35%;
+}
+
+.step-text-box {
+}
+/* .section-how div div {
+  padding: 100px;
+  font-size: 50px;
+  background-color: #333;
+} */
