--- a/starter/07-Omnifood-Desktop/css/general.css
+++ b/starter/07-Omnifood-Desktop/css/general.css
@@ -28,7 +28,10 @@ Tints:
 #fae5d3
 
 
-Shades: #cf711f
+Shades:
+#cf711f
+#45260a
+
 Accents:
 Greys:
 #555
@@ -37,6 +40,7 @@ Greys:
 
 
 -- 05 SHADOWS
+  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
 
 -- 06 BORDER-RADIUS
 default: 9px
@@ -140,6 +144,7 @@ body {
   letter-spacing: 0.75px;
 }
 
+.btn,
 .btn:link,
 .btn:visited {
   display: inline-block;
@@ -148,6 +153,11 @@ body {
   font-size: 2rem;
   padding: 1.6rem 3.2rem;
   border-radius: 0.9rem;
+
+  /*only for btn it self*/
+  border: none;
+  cursor: pointer;
+  font-family: inherit;
 
   /* transition: background-color 0.3s; */
   transition: all 0.3s;
@@ -176,6 +186,18 @@ body {
   /* border: 3px solid #fff; */
   /* Trick to add border inside */
   box-shadow: inset 0 0 0 3px #fff;
+}
+
+.btn--form {
+  background-color: #45260a;
+  color: #fdf2e9;
+  align-self: end;
+  padding: 1.2rem;
+}
+
+.btn--form:hover {
+  background-color: #fff;
+  color: #555;
 }
 
 .link:link,
@@ -212,6 +234,13 @@ body {
   width: 3rem;
   height: 3rem;
   color: #e67e22;
+}
+
+*:focus {
+  outline: none;
+  /* outline: 4px dotted #e67e22;
+  outline-offset: 8px; */
+  box-shadow: 0 0 0 0.8rem rgba(230, 125, 34, 0.5);
 }
 
 /* HELPER/SETTINGS CLASSES */
