@media queries for mobile

--- a/starter/07-Omnifood-Desktop/css/general.css
+++ b/starter/07-Omnifood-Desktop/css/general.css
@@ -60,6 +60,7 @@ medium 11px
 html {
   /* font-size: 10px; */
   font-size: 62.5%;
+  overflow-x: hidden; /* to hiden de menu */
 }
 
 body {
@@ -67,6 +68,8 @@ body {
   line-height: 1;
   font-weight: 400;
   color: #555;
+
+  overflow-x: hidden; /* to hiden de menu */
 }
 
 /**************************************/
