added scroll, added -webkit, added favicons, optimized images, added meta information

--- a/final/09-Omnifood-Optimizations/css/queries.css
+++ b/final/09-Omnifood-Optimizations/css/queries.css
@@ -164,11 +164,11 @@
     transform: translateX(0);
   }
 
-  .nav-open .icon-mobile-nav[name="close-outline"] {
+  .nav-open .icon-mobile-nav[name='close-outline'] {
     display: block;
   }
 
-  .nav-open .icon-mobile-nav[name="menu-outline"] {
+  .nav-open .icon-mobile-nav[name='menu-outline'] {
     display: none;
   }
 
@@ -294,7 +294,7 @@
   }
 }
 
-/* 
+/*
 - Font sizes (px)
 10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
 
