--- a/starter/07-Omnifood-Desktop/css/general.css
+++ b/starter/07-Omnifood-Desktop/css/general.css
@@ -26,18 +26,22 @@ Primary: #e67e22
 Tints:
 #fdf2e9
 #fae5d3
+#eb984e
+
 
 
 Shades:
 #cf711f
 #45260a
 
-Accents:
-Greys:
+- Accents:
+- Greys
+
+#888
+#767676 (lightest grey allowed on #fff)
+#6f6f6f (lightest grey allowed on #fdf2e9)
 #555
 #333
-#6f6f6f (lightest grey allowed on #fdf2e9)
-
 
 -- 05 SHADOWS
   box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
@@ -47,6 +51,7 @@ default: 9px
 medium 11px
 
 -- 07 WHITESPACE
+
 - Spacing System (px)
 2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
 
@@ -59,8 +64,14 @@ medium 11px
 }
 html {
   /* font-size: 10px; */
+
+  /* 10px / 16px = 0.625 = 62.5% */
+  /* Percentage of user's browser font-size setting */
   font-size: 62.5%;
-  overflow-x: hidden; /* to hiden de menu */
+  overflow-x: hidden;
+
+  /* Does NOT work on Safari */
+  /* scroll-behavior: smooth; */
 }
 
 body {
@@ -69,7 +80,8 @@ body {
   font-weight: 400;
   color: #555;
 
-  overflow-x: hidden; /* to hiden de menu */
+  /* Only works if there is nothing absolutely positioned in relation to body */
+  overflow-x: hidden;
 }
 
 /**************************************/
@@ -109,9 +121,9 @@ body {
   grid-template-columns: repeat(4, 1fr);
 }
 
-.grid--5-cols {
+/* .grid--5-cols {
   grid-template-columns: repeat(5, 1fr);
-}
+} */
 
 .grid--center-v {
   align-items: center;
@@ -143,7 +155,7 @@ body {
 
 .subheading {
   display: block; /* because is a span element so need block */
-  font-size: 2rem;
+  font-size: 1.6rem;
   font-weight: 500;
   color: #cf711f;
   text-transform: uppercase;
@@ -155,17 +167,19 @@ body {
 .btn:link,
 .btn:visited {
   display: inline-block;
+
   text-decoration: none;
-  font-weight: 600;
   font-size: 2rem;
+  font-weight: 600;
   padding: 1.6rem 3.2rem;
-  border-radius: 0.9rem;
+  border-radius: 0.9px;
 
   /*only for btn it self*/
   border: none;
   cursor: pointer;
   font-family: inherit;
 
+  /* Put transition on original "state" */
   /* transition: background-color 0.3s; */
   transition: all 0.3s;
 }
@@ -234,7 +248,8 @@ body {
   font-size: 1.8rem;
   display: flex;
   align-items: center;
-  gap: 1.2rem;
+  gap: 1.6rem;
+  line-height: 1.2;
 }
 
 .list-icon {
@@ -251,7 +266,6 @@ body {
 }
 
 /* HELPER/SETTINGS CLASSES */
-
 .margin-right-sm {
   margin-right: 1.6rem !important;
 }
