--- a/starter/07-Omnifood-Desktop/css/style.css
+++ b/starter/07-Omnifood-Desktop/css/style.css
@@ -56,7 +56,6 @@
 .main-nav-link.nav-cta:hover,
 .main-nav-link.nav-cta:active {
   background-color: #cf711f;
-  color: #fff;
 }
 
 /* MOBILE */
@@ -64,7 +63,6 @@
   border: none;
   background-color: none;
   cursor: pointer;
-
   display: none;
 }
 
@@ -98,17 +96,14 @@
   align-items: center;
 }
 
-.hero-img {
-  width: 100%;
-}
-
-.hero-img-box {
-}
-
 .hero-description {
   font-size: 2rem;
   line-height: 1.6;
   margin-bottom: 4.8rem;
+}
+
+.hero-img {
+  width: 100%;
 }
 
 .delivered-meals {
@@ -130,7 +125,7 @@
 }
 
 .delivered-imgs img:last-child {
-  margin-right: 0;
+  margin: 0;
 }
 .dilevered-text {
   font-size: 1.8rem;
@@ -155,7 +150,6 @@
   text-transform: uppercase;
   letter-spacing: 0.75px;
   font-weight: 500;
-  display: block;
   text-align: center;
   margin-bottom: 2.4rem;
   color: #888;
@@ -230,15 +224,8 @@
 
 .step-img {
   width: 35%;
+  /* z-index: 10; */
 }
-
-.step-text-box {
-}
-/* .section-how div div {
-  padding: 100px;
-  font-size: 50px;
-  background-color: #333;
-} */
 
 /**************************************/
 /* MEALS SECTION */
@@ -294,7 +281,6 @@
   font-size: 2.4rem;
   color: #333;
   font-size: 600;
-  margin-top: 1rem;
   margin-bottom: 3.2rem;
 }
 
@@ -311,14 +297,14 @@
   gap: 1.6rem;
 }
 
-.meal-img {
-  width: 100%;
-}
-
 .meal-icon {
   height: 2.4rem;
   width: 2.4rem;
   color: #e67e22;
+}
+
+.meal-img {
+  width: 100%;
 }
 
 .all-recipes {
@@ -344,6 +330,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   row-gap: 4.8rem;
+  column-gap: 8rem;
 }
 
 .testimonial-img {
@@ -392,21 +379,7 @@
 
 .pricing-plan {
   border-radius: 11px;
-
   width: 75%;
-}
-
-.plan-header {
-  text-align: center;
-  margin-bottom: 4.8rem;
-}
-.plan-name {
-  color: #cf711f;
-  font-weight: 600;
-  font-size: 1.6rem;
-  text-transform: uppercase;
-  letter-spacing: 0.75;
-  margin-bottom: 3.2rem;
 }
 
 .pricing-plan--starter {
@@ -421,18 +394,32 @@
   position: relative;
   overflow: hidden;
 }
+
 .pricing-plan--complete::after {
   content: 'Best value';
   position: absolute;
+  top: 6%;
+  right: -18%;
   text-transform: uppercase;
   font-size: 1.4rem;
   font-weight: 700;
-  top: 6%;
-  right: -18%;
   color: #333;
   background-color: #ffd43b;
   padding: 0.8rem 8rem;
   transform: rotate(45deg);
+}
+
+.plan-header {
+  text-align: center;
+  margin-bottom: 4.8rem;
+}
+.plan-name {
+  color: #cf711f;
+  font-weight: 600;
+  font-size: 1.6rem;
+  text-transform: uppercase;
+  letter-spacing: 0.75;
+  margin-bottom: 3.2rem;
 }
 
 .plan-price {
@@ -500,8 +487,9 @@
 
 .cta {
   display: grid;
+  /* 2/3 = 66.6% + 1/3 = 33.3% */
   grid-template-columns: 2fr 1fr;
-  background-color: #e67e22;
+  /* background-color: #e67e22; */
   box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.15);
   border-radius: 11px;
   background-image: linear-gradient(to right bottom, #eb984e, #e67e22);
@@ -558,7 +546,7 @@
   border: none;
   background-color: #fdf2e9;
   border-radius: 9px;
-  box-shadow: 9 1px 2px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 }
 
 .cta-for input::placeholder {
@@ -567,12 +555,11 @@
 
 .cta *:focus {
   outline: none;
-
   box-shadow: 0 0 0 0.8rem rgba(253, 242, 233, 0.5);
 }
 
 /**************************************/
-/* FOOTER SECTION */
+/* FOOTER */
 /**************************************/
 
 .footer {
@@ -607,7 +594,7 @@
 
 .copyright {
   font-size: 1.4rem;
-  line-height: 1.6rem;
+  line-height: 1.6;
   color: #767676;
   margin-top: auto;
 }
