--- a/starter/07-Omnifood-Desktop/css/queries.css
+++ b/starter/07-Omnifood-Desktop/css/queries.css
@@ -3,13 +3,16 @@
 /**************************/
 /* BELOW 1344px (Smaller desktops) */
 /**************************/
+
 @media (max-width: 84em) {
   .hero {
     max-width: 120rem;
   }
+
   .heading-primary {
     font-size: 4.4rem;
   }
+
   .gallery {
     grid-template-columns: repeat(2, 1fr);
   }
@@ -60,8 +63,8 @@
 /**************************/
 
 @media (max-width: 59em) {
-  .html {
-    /* 8px/16px = 50% */
+  html {
+    /* 8px / 16px = 0.5 = 50% */
     font-size: 50%;
   }
 
@@ -117,67 +120,67 @@
   .btn--form {
     margin-top: 1.2rem;
   }
-}
 
-/* MOBILE NAVIGATION */
-.btn-mobile-nav {
-  display: block;
-  z-index: 9999;
-}
+  /* MOBILE NAVIGATION */
+  .btn-mobile-nav {
+    display: block;
+    z-index: 9999;
+  }
 
-.main-nav {
-  background-color: rgba(255, 255, 255, 0.9);
-  -webkit-backdrop-filter: blur(5px);
-  backdrop-filter: blur(10px);
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  transform: translateX(100%);
+  .main-nav {
+    background-color: rgba(255, 255, 255, 0.9);
+    -webkit-backdrop-filter: blur(5px);
+    backdrop-filter: blur(10px);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    transform: translateX(100%);
 
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: all 0.5s ease-in;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.5s ease-in;
 
-  /* Hide naavigation */
-  /* Allows no transitions at all */
-  /* display: none; */
+    /* Hide navigation */
+    /* Allows NO transitions at all */
+    /* display: none; */
 
-  /* 1) Hide it visually */
-  opacity: 0;
+    /* 1) Hide it visually */
+    opacity: 0;
 
-  /* 2) Make it unaccessible to mouse and keyboard */
-  pointer-events: none;
+    /* 2) Make it unaccessible to mouse and keyboard */
+    pointer-events: none;
 
-  /* 3) Hide it unaccessible screen readers */
+    /* 3) Hide it from screen readers */
+    visibility: hidden;
+  }
 
-  visibility: hidden;
-}
+  .nav-open .main-nav {
+    opacity: 1;
+    pointer-events: auto;
+    visibility: visible;
+    transform: translateX(0);
+  }
 
-.nav-open .main-nav {
-  opacity: 1;
-  pointer-events: auto;
-  visibility: visible;
-  transform: translateX(0);
-}
+  .nav-open .icon-mobile-nav[name='close-outline'] {
+    display: block;
+  }
 
-.nav-open .icon-mobile-nav[name='close-outline'] {
-  display: block;
-}
-.nav-open .icon-mobile-nav[name='menu-outline'] {
-  display: none;
-}
+  .nav-open .icon-mobile-nav[name='menu-outline'] {
+    display: none;
+  }
 
-.main-nav-list {
-  flex-direction: column;
-  gap: 4.8rem;
-}
+  .main-nav-list {
+    flex-direction: column;
+    gap: 4.8rem;
+  }
 
-.main-nav-link:link,
-.main-nav-link:visited {
-  font-size: 3rem;
+  .main-nav-link:link,
+  .main-nav-link:visited {
+    font-size: 3rem;
+  }
 }
 
 /**************************/
@@ -189,10 +192,12 @@
   .grid--4-cols {
     grid-template-columns: repeat(2, 1fr);
   }
+
   .diets {
     grid-column: 1 / -1;
     justify-self: center;
   }
+
   .heading-secondary {
     margin-bottom: 4.8rem;
   }
@@ -209,6 +214,7 @@
   .address-col {
     grid-column: span 3;
   }
+
   .nav-col {
     grid-row: 1;
     grid-column: span 2;
@@ -256,22 +262,28 @@
   .step-img-box:nth-child(2) {
     grid-row: 1;
   }
+
   .step-img-box:nth-child(6) {
     grid-row: 5;
   }
+
   .step-img-box {
     transform: translateY(2.4rem);
   }
+
   .testimonials {
     grid-template-columns: 1fr;
   }
+
   .gallery {
     grid-template-columns: repeat(4, 1fr);
     gap: 1.2rem;
   }
+
   .cta {
     grid-template-columns: 1fr;
   }
+
   .cta-text-box {
     padding: 3.2rem;
   }
