--- a/adancedCSS/Natours/starter/sass/layout/_header.scss
+++ b/adancedCSS/Natours/starter/sass/layout/_header.scss
@@ -10,7 +10,7 @@
   background-position: top; /* focus the image on parameter */
 
   position: relative;
-
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%); /* */
 
   &__logo-box {
