--- a/adancedCSS/Natours/starter/sass/main.scss
+++ b/adancedCSS/Natours/starter/sass/main.scss
@@ -13,6 +13,7 @@
 @import 'components/story';
 @import 'components/composition';
 @import 'components/feature-box';
+@import 'components/form';
 
 @import 'layout/_grid';
 @import 'layout/header';
