--- a/adancedCSS/Natours/starter/sass/main.scss
+++ b/adancedCSS/Natours/starter/sass/main.scss
@@ -15,8 +15,9 @@
 @import 'components/feature-box';
 @import 'components/form';
 
-@import 'layout/_grid';
+@import 'layout/grid';
 @import 'layout/header';
 @import 'layout/footer';
+@import 'layout/navigation';
 
 @import 'pages/home';
