--- a/adancedCSS/Natours/starter/sass/main.scss
+++ b/adancedCSS/Natours/starter/sass/main.scss
@@ -14,6 +14,7 @@
 @import 'components/composition';
 @import 'components/feature-box';
 @import 'components/form';
+@import 'components/popup';
 
 @import 'layout/grid';
 @import 'layout/header';
