--- a/adancedCSS/Natours/starter/sass/components/_popup.scss
+++ b/adancedCSS/Natours/starter/sass/components/_popup.scss
@@ -6,9 +6,25 @@
   left: 0;
   background-color: rgba($color-black, 0.8);
   z-index: 9999;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.2s;
+  line-height: 1;
+
+  // when you click to a button open states
+  &:target {
+    opacity: 1;
+    visibility: visible;
+  }
+
+  &:target &__content {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
+  }
 
   &__content {
     @include absCenter;
+
     width: 75%;
     // height: 50rem;
     background-color: $color-white;
@@ -16,6 +32,9 @@
     border-radius: 3px;
     display: table;
     overflow: hidden;
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(0.25);
+    transition: all 0.5s 0.2s;
   }
 
   &__left {
@@ -44,5 +63,23 @@
     -ms-hyphens: auto;
     -webkit-hyphens: auto;
     hyphens: auto;
+  }
+
+  &__close {
+    &:link,
+    &:visited {
+      position: absolute;
+      top: 2.5rem;
+      right: 2.5rem;
+      color: $color-grey-dark;
+      font-size: 3rem;
+      text-decoration: none;
+      display: inline-block;
+      transition: all 0.2s;
+    }
+
+    &:hover {
+      color: $color-primary;
+    }
   }
 }
