--- a/adancedCSS/Trillo/starter/sass/_layout.scss
+++ b/adancedCSS/Trillo/starter/sass/_layout.scss
@@ -24,10 +24,17 @@
 .sidebar {
   background-color: var(--color-grey-dark-1);
 
-  flex: 0 0 18%; // to keep 18% without shrink
+  flex: 0 0 18%; // to keep 18% without shrink\
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .hotel-view {
-  background-color: orangered;
+  background-color: #fff;
+
+  // teste
+  height: 80rem;
   flex: 1; // grow as much as they can
 }
