--- a/adancedCSS/Trillo/starter/sass/_layout.scss
+++ b/adancedCSS/Trillo/starter/sass/_layout.scss
@@ -11,7 +11,7 @@
   font-size: 1.4rem;
   height: 7rem;
   background-color: #fff;
-  border-bottom: var(--color-grey-light-2);
+  border-bottom: var(--line);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -35,6 +35,26 @@
   background-color: #fff;
 
   // teste
-  height: 80rem;
+  // height: 80rem;
   flex: 1; // grow as much as they can
+}
+
+.detail {
+  display: flex;
+  padding: 4.5rem;
+  background-color: var(--color-grey-light-1);
+  border-bottom: var(--line);
+}
+.description {
+  font-size: 1.4rem;
+  background-color: #fff;
+  box-shadow: var(--shadow-light);
+  padding: 3rem;
+  flex: 0 0 60%; // to use 60% of available space
+  margin-right: 4.5rem;
+}
+
+.user-reviews {
+  background-color: orangered;
+  flex: 1; // to use the remaining space availabale
 }
