add  user revies section

--- a/adancedCSS/Trillo/starter/sass/_layout.scss
+++ b/adancedCSS/Trillo/starter/sass/_layout.scss
@@ -40,13 +40,14 @@
 }
 
 .detail {
+  font-size: 1.4rem;
   display: flex;
   padding: 4.5rem;
   background-color: var(--color-grey-light-1);
   border-bottom: var(--line);
 }
+
 .description {
-  font-size: 1.4rem;
   background-color: #fff;
   box-shadow: var(--shadow-light);
   padding: 3rem;
@@ -55,6 +56,9 @@
 }
 
 .user-reviews {
-  background-color: orangered;
   flex: 1; // to use the remaining space availabale
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
