--- a/adancedCSS/Nexter/starter/css/style.comp.css
+++ b/adancedCSS/Nexter/starter/css/style.comp.css
@@ -280,7 +280,7 @@ body {
 
 .homes {
   grid-column: center-start / center-end;
-  margin: 15rem 0;
+  margin: 15 0;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
   grid-gap: 7rem; }
