fix title color

--- a/animeJS/css/style.css
+++ b/animeJS/css/style.css
@@ -29,7 +29,7 @@ body {
 .title-text {
   display: block;
   font-size: 5rem;
-  color: #999;
+  color: #f56b59;
   margin: 2rem 0rem;
 }
 .title-anime {
