--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,9 @@ body {
 .card__heading-span--7 {
   background-image: linear-gradient(to right bottom, #581b1b, #83e267);
 }
+.card__heading-span--8 {
+  background-image: linear-gradient(to right bottom, #222, #555);
+}
 
 .card__picture {
   background-size: cover;
@@ -171,6 +174,11 @@ body {
 .card__picture--7 {
   background-image: linear-gradient(to right bottom, #581b1b, #83e267),
     url('/img/anime.jpeg');
+  position: relative;
+}
+.card__picture--8 {
+  background-image: linear-gradient(to right bottom, #222, #555),
+    url('/img/projects/store.jpg');
   position: relative;
 }
 
